feat: add comment for userCreate
